--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,7 @@
 # This is a basic workflow to help you get started with Actions
-
+permissions:
+  write-all
+  
 name: helm_chart_build
 
 # Controls when the workflow will run
