--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,4 @@
 # This is a basic workflow to help you get started with Actions
-permissions:
-  write-all
-  
 name: helm_chart_build
 
 # Controls when the workflow will run
@@ -14,7 +11,7 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+permissions: write-all
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   release:
